infra/kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-nginx
  namespace: app-nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-nginx
  template:
    metadata:
      labels:
        app: app-nginx
    spec:
      containers:
        - name: app-nginx
          image: rg.fr-par.scw.cloud/test-custom-image-argo-cd/app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: 100Mi
              cpu: 100m
            limits:
              memory: 100Mi
              cpu: 100m
