infra/kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-nginx-service
  namespace: app-nginx
spec:
  selector:
    app: app-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
